tests/invalid/undef_mode.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module undef_mode.

:- pred x(int).
:- mode x(foo) is det.

x(1).
